@@ -25,6 +25,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-12-19 [B] Fixed [url] bbcodes not properly rendering {SaWey}
+2008-12-19 [A] Added opening of rel="external" links in new window (core & documentation) {SaWey}
 2008-12-19 [B] Fixed the bug http://forum.coppermine-gallery.net/index.php/topic,57065.msg279324.html#msg279324 {Abbas}
 2008-12-19 [M] Removed the redundant display filename in filmstrip feature completely {Abbas}
 2008-12-18 [B] Fixed db_ecard.php not deleting ecards {SaWey}
